# vivarium_testing_utils

./: .gitignore  CHANGELOG.rst  Jenkinsfile  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: build.yml  deploy.yml  pr_metrics  pr_metrics.yml
docs/source/: conf.py  index.rst
docs/source/automated_v_and_v/: index.rst
docs/source/fuzzy_checking/: index.rst
src/vivarium_testing_utils/: __init__.py  fuzzy_checker.py  pytest_plugin.py
src/vivarium_testing_utils/automated_validation/: __init__.py  bundle.py  calculations.py  comparison.py  constants.py  data_loader.py  data_schema.py  interface.py  measures.py  plot_utils.py  results.py  types.py
src/vivarium_testing_utils/automated_validation/data_transformation/: age_groups.py  calculations.py  data_bundle.py  data_schema.py  formatting.py  measurement_data.py  measures.py  rate_aggregation.py  report.py  utils.py
src/vivarium_testing_utils/automated_validation/templates/: report_template.html
src/vivarium_testing_utils/automated_validation/visualization/: dataframe_utils.py  plot_utils.py
tests/: conftest.py  test_fuzzy_checker.py  test_pytest_plugin.py
tests/automated_validation/: conftest.py  test_calculations.py  test_comparison.py  test_data_bundle.py  test_data_loader.py  test_interface.py
tests/automated_validation/data/artifacts/: artifact.hdf
tests/automated_validation/data/sim_outputs/results/: deaths.parquet  (+4 more)
tests/automated_validation/data_transformation/: test_age_groups.py  test_calculations.py  test_data_schema.py  test_formatting.py  test_measures.py
tests/automated_validation/gbd_data/: cause_specific_mortality_rate.csv  exposure.csv  relative_risks.csv  remission_rate.csv
tests/automated_validation/visualization/: test_dataframe_utils.py  test_plot_utils.py
(+1 files in other folders)
