[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests/"]

[tool.coverage.run]
source = ["vivarium_testing_utils"]

[tool.coverage.report]
show_missing = true

[tool.black]
line_length = 94
exclude = '''.*examples.*'''

[tool.isort]
line_length = 94
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent, see https://pypi.org/project/isort/
skip_glob = ["*/examples/*", "**/examples/*"]

[tool.mypy]
# This is the global mypy configuration.
strict = true  # See all the enabled flags `mypy --help | grep -A 10 'Strict mode'`
disallow_any_unimported = false
implicit_reexport = true
exclude = [
    "build",
    "setup.py",
    "docs/source/conf.py",
    "src/vivarium_testing_utils/automated_validation/data_transformation/measures.py",
    "src/vivarium_testing_utils/automated_validation/comparison.py",
    "src/vivarium_testing_utils/automated_validation/plot_utils.py", # Only stubbed out currently
    "src/vivarium_testing_utils/automated_validation/data_loader.py",

    "tests/automated_validation/test_data_loader.py",
    "tests/automated_validation/test_interface.py",
    "tests/automated_validation/data_transformation/test_formatting.py",
    "tests/automated_validation/data_transformation/test_measures.py",
    "tests/automated_validation/data_transformation/test_data_schema.py",

    "src/vivarium_testing_utils/fuzzy_checker.py",
    "tests/test_fuzzy_checker.py",
]
plugins = ["pandera.mypy"]

# handle mypy errors when 3rd party packages are not typed.
[[tool.mypy.overrides]]
module = [
    "py._path.local",
    "scipy.*",
    # "sklearn.*",
    "vivarium.*",
]
ignore_missing_imports = true
